# omoralabs-docs

./: .gitignore  .jscpd.json  .vercelignore  README.md  mdx-components.tsx  package.json  pnpm-lock.yaml
.github/workflows/: publish-npm.yml  registry-tests.yml
.husky/: pre-commit
app/: global.css  layout.tsx
app/(home)/: not-found.tsx
components/: card.tsx  drawer-menu.tsx  nav-title.tsx  render-table.tsx  type-table.tsx
components/ai/: page-actions.tsx
components/layout/: search-toggle.tsx
components/ui/: card.tsx  scroll-area.tsx
config/: index.ts
content/docs/: architecture.mdx  index.mdx  meta.json  stack.mdx
icons/: general.tsx
lib/: layout.shared.tsx  nav-title.tsx
registry/: README.md  cli.js  package-lock.json  package.json
registry/blueprints/plan_vs_actuals/: dbt_project.yml  pyproject.toml  registry.json
registry/blueprints/plan_vs_actuals/models/: gl_accounts_source.sql  pnl_source.sql  schema.yml
registry/blueprints/saas_metrics/config/: README.md  pyproject.toml
registry/database/: data_loader.py  main.py  methods.py  registry.json  schema_manager.py  utils.py
registry/facts/: assets.csv  assets.json  assets.py  customer_count.csv  customer_count.json  mrr_view.csv  mrr_view.json  pnl.csv  pnl.json  revenue_changes.csv  revenue_changes.json  revenue_starting_balance.csv  revenue_starting_balance.json
registry/semantic_layers/: asset_types.json  assets_providers.json  business_units.json  currency_pairs.csv  currency_pairs.json  dates.csv  gl_accounts_segmented.json  gl_accounts_simple.json  gl_accounts_types.json  (+4 more)
(+182 files in other folders)
