[project]
name = "budget-vs-actuals"
version = "0.1.0"
description = "Budget vs Actuals Variance Analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt>=1.0.0.40.14",
    "dbt-duckdb>=1.10.0",
    "dotenv>=0.9.9",
    "duckdb>=1.4.3",
    "polars"
]

[tool.uv]
package = true

[project.scripts]
plan-db-local = "plan_vs_actuals.database.main:entry_setup_local_db"
plan-db-remote = "plan_vs_actuals.database.main:entry_to_remote"
